add hl7 mapper skeleton (wip)