@@ -1,22 +1,16 @@
 package de.unimarburg.diz.labtofhir.mapper;
 
 import ca.uhn.fhir.context.FhirContext;
-import ca.uhn.fhir.parser.IParser;
-import com.google.common.hash.Hashing;
 import de.unimarburg.diz.labtofhir.configuration.FhirProperties;
 import de.unimarburg.diz.labtofhir.model.LaboratoryReport;
-import de.unimarburg.diz.labtofhir.model.MetaCode;
+import de.unimarburg.diz.labtofhir.model.SupportedDataFormat;
 import de.unimarburg.diz.labtofhir.util.TimestampPrefixedId;
 import java.lang.reflect.InvocationTargetException;
-import java.nio.charset.StandardCharsets;
-import java.util.EnumSet;
 import java.util.List;
 import java.util.Objects;
-import java.util.Set;
-import java.util.function.Function;
 import java.util.stream.Collectors;
+import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.math.NumberUtils;
-import org.apache.kafka.streams.kstream.ValueMapper;
 import org.hl7.fhir.r4.model.Bundle;
 import org.hl7.fhir.r4.model.Bundle.BundleEntryComponent;
 import org.hl7.fhir.r4.model.Bundle.BundleEntryRequestComponent;
@@ -43,71 +37,38 @@ import org.hl7.fhir.r4.model.Resource;
 import org.hl7.fhir.r4.model.ResourceType;
 import org.hl7.fhir.r4.model.ServiceRequest;
 import org.hl7.fhir.r4.model.Type;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.stereotype.Service;
 
+@Slf4j
 @Service
-public class MiiLabReportMapper implements
-    ValueMapper<LaboratoryReport, Bundle> {
+@ConditionalOnProperty(prefix = "mapping", name = "format", havingValue = SupportedDataFormat.AIM)
+public class AimLabMapper extends BaseMapper<LaboratoryReport> {
 
-    public static final Set<String> META_CODES = EnumSet
-        .allOf(MetaCode.class)
-        .stream()
-        .map(Enum::toString)
-        .collect(Collectors.toSet());
-    private static final Logger LOG = LoggerFactory.getLogger(
-        MiiLabReportMapper.class);
-    private final IParser fhirParser;
-    private final FhirProperties fhirProperties;
-    private final Function<String, String> hasher = i -> Hashing
-        .sha256()
-        .hashString(i, StandardCharsets.UTF_8)
-        .toString();
-    private final Identifier identifierAssigner;
-    private final LoincMapper loincMapper;
-
-    public MiiLabReportMapper(FhirContext fhirContext,
-        FhirProperties fhirProperties, LoincMapper loincMapper) {
-        this.fhirProperties = fhirProperties;
-        this.loincMapper = loincMapper;
-        fhirParser = fhirContext.newJsonParser();
-        identifierAssigner = new Identifier()
-            .setSystem(fhirProperties
-                .getSystems()
-                .getAssignerId())
-            .setValue(fhirProperties
-                .getSystems()
-                .getAssignerCode());
+    public AimLabMapper(FhirContext fhirContext, FhirProperties fhirProperties,
+        LoincMapper loincMapper) {
+        super(fhirContext, fhirProperties, loincMapper);
     }
 
-    @SuppressWarnings("checkstyle:LineLength")
     private <T extends Resource> T createWithId(Class<T> resourceType,
-        String id)
-        throws NoSuchMethodException, IllegalAccessException, InvocationTargetException, InstantiationException {
-        var resource = resourceType
-            .getConstructor()
-            .newInstance();
+        String id) throws NoSuchMethodException, IllegalAccessException,
+        InvocationTargetException, InstantiationException {
+        var resource = resourceType.getConstructor().newInstance();
         resource.setId(resourceType.getSimpleName() + "/" + id);
 
         return resource;
     }
 
     private <T extends DomainResource> void setNarrative(T resource) {
-        var narrative = fhirParser
-            .setPrettyPrint(true)
-            .encodeResourceToString(resource);
-        resource
-            .getText()
-            .setStatus(NarrativeStatus.GENERATED);
-        resource
-            .getText()
-            .setDivAsString(narrative);
+        var narrative =
+            fhirParser().setPrettyPrint(true).encodeResourceToString(resource);
+        resource.getText().setStatus(NarrativeStatus.GENERATED);
+        resource.getText().setDivAsString(narrative);
     }
 
     @Override
     public Bundle apply(LaboratoryReport report) {
-        LOG.debug("Mapping LaboratoryReport with id:{} and order number:{}",
+        log.debug("Mapping LaboratoryReport with id:{} and order number:{}",
             report.getId(), report.getReportIdentifierValue());
         Bundle bundle = new Bundle();
         try {
@@ -124,23 +85,19 @@ public class MiiLabReportMapper implements
             var mappedReport = mapDiagnosticReport(report.getResource(), bundle)
 
                 // observations
-                .setResult((report
-                    .getObservations()
-                    .stream()
+                .setResult((report.getObservations().stream()
                     // map observations
                     .map(this::mapObservation)
-                    .map(o -> loincMapper.map(o, report.getMetaCode()))
+                    .map(o -> loincMapper().map(o, report.getMetaCode()))
 
                     // add to bundle
                     .peek(o -> addResourceToBundle(bundle, o))
                     // set result references
                     .map(Reference::new)).collect(Collectors.toList()));
 
-            if (mappedReport
-                .getResult()
-                .isEmpty()) {
+            if (mappedReport.getResult().isEmpty()) {
                 // report contains no observations
-                LOG.info(
+                log.info(
                     "No Observations after mapping for LaboratoryReport with "
                         + "id {} and order number {}. Discarding.",
                     report.getId(), report.getReportIdentifierValue());
@@ -150,13 +107,13 @@ public class MiiLabReportMapper implements
             setPatient(report, bundle);
             setEncounter(report, bundle);
 
-            if (fhirProperties.getGenerateNarrative()) {
+            if (fhirProperties().getGenerateNarrative()) {
                 generateNarratives(bundle);
             }
 
 
         } catch (Exception e) {
-            LOG.error(
+            log.error(
                 "Mapping failed for LaboratoryReport with id {} and order "
                     + "number {}", report.getId(),
                 report.getReportIdentifierValue(), e);
@@ -164,38 +121,30 @@ public class MiiLabReportMapper implements
             return null;
         }
 
-        LOG.debug("Mapped successfully to FHIR bundle: id:{}, order number:{}",
+        log.debug("Mapped successfully to FHIR bundle: id:{}, order number:{}",
             report.getId(), report.getReportIdentifierValue());
-        LOG.trace("FHIR bundle: {}", fhirParser.encodeResourceToString(bundle));
+        log.trace("FHIR bundle: {}",
+            fhirParser().encodeResourceToString(bundle));
 
         return bundle;
     }
 
-    private MiiLabReportMapper processMetaResults(LaboratoryReport report) {
-        var metaObs = report
-            .getObservations()
-            .stream()
-            .filter(x -> META_CODES.contains(x
-                .getCode()
-                .getCoding()
-                .stream()
-                .findFirst()
-                .orElse(new Coding())
-                .getCode()))
-            .toList();
+    private AimLabMapper processMetaResults(LaboratoryReport report) {
+        var metaObs = report.getObservations().stream().filter(
+            x -> META_CODES.contains(
+                x.getCode().getCoding().stream().findFirst()
+                    .orElse(new Coding()).getCode())).toList();
 
         if (!metaObs.isEmpty()) {
             // only one meta code currently supported
             var firstMetaObs = metaObs.get(0);
             if (firstMetaObs.hasValueStringType()) {
-                report.setMetaCode(firstMetaObs
-                    .getValueStringType()
-                    .getValue());
+                report.setMetaCode(
+                    firstMetaObs.getValueStringType().getValue());
             }
 
             // remove from DiagnosticReport
-            report
-                .getObservations()
+            report.getObservations()
                 .removeIf(x -> Objects.equals(x, firstMetaObs));
         }
 
@@ -203,13 +152,9 @@ public class MiiLabReportMapper implements
     }
 
     private void generateNarratives(Bundle bundle) {
-        bundle
-            .getEntry()
-            .stream()
-            .map(BundleEntryComponent::getResource)
+        bundle.getEntry().stream().map(BundleEntryComponent::getResource)
             .filter(DomainResource.class::isInstance)
-            .map(DomainResource.class::cast)
-            .forEach(this::setNarrative);
+            .map(DomainResource.class::cast).forEach(this::setNarrative);
     }
 
 
@@ -218,53 +163,40 @@ public class MiiLabReportMapper implements
         var identifierType = new CodeableConcept().addCoding(new Coding()
             .setSystem("http://terminology.hl7.org/CodeSystem/v2-0203")
             .setCode("FILL"));
-        var identifierValue = labReport
-            .getIdentifierFirstRep()
-            .getValue();
+        var identifierValue = labReport.getIdentifierFirstRep().getValue();
 
         var report = new DiagnosticReport();
         // id
         report.setId(identifierValue);
         // meta data
-        report.setMeta(new Meta()
-            .setProfile(List.of(new CanonicalType(
-                "https://www.medizininformatik-initiative"
-                    + ".de/fhir/core/modul-labor/StructureDefinition"
-                    + "/DiagnosticReportLab")))
-            .setSource("#swisslab"));
+        report.setMeta(new Meta().setProfile(List.of(new CanonicalType(
+            "https://www.medizininformatik-initiative"
+                + ".de/fhir/core/modul-labor/StructureDefinition"
+                + "/DiagnosticReportLab"))).setSource("#swisslab"));
 
         // identifier
-        report.setIdentifier(List.of(new Identifier()
-                .setType(identifierType)
-                .setSystem(fhirProperties
-                    .getSystems()
-                    .getDiagnosticReportId())
+        report.setIdentifier(List.of(new Identifier().setType(identifierType)
+                .setSystem(fhirProperties().getSystems().getDiagnosticReportId())
                 .setValue(identifierValue)
-                .setAssigner(
-                    new Reference().setIdentifier(getIdentifierAssigner()))))
+                .setAssigner(new Reference().setIdentifier(identifierAssigner()))))
 
             // basedOn
             .setBasedOn(List.of(new Reference("ServiceRequest/" + createId(
-                fhirProperties
-                    .getSystems()
-                    .getServiceRequestId(), identifierValue,
-                labReport.getEffectiveDateTimeType()))))
+                fhirProperties().getSystems().getServiceRequestId(),
+                identifierValue, labReport.getEffectiveDateTimeType()))))
 
             // status
             .setStatus(labReport.getStatus())
 
             // category
-            .setCategory(List.of(new CodeableConcept()
-                .addCoding(new Coding()
-                    .setSystem("http://loinc.org")
-                    .setCode("26436-6"))
+            .setCategory(List.of(new CodeableConcept().addCoding(
+                    new Coding().setSystem("http://loinc.org").setCode("26436-6"))
                 .addCoding(new Coding()
                     .setSystem("http://terminology.hl7.org/CodeSystem/v2-0074")
                     .setCode("LAB"))
                 // with local category
-                .addCoding(labReport
-                    .getCategoryFirstRep()
-                    .getCodingFirstRep())))
+                .addCoding(
+                    labReport.getCategoryFirstRep().getCodingFirstRep())))
 
             // code
             .setCode(labReport.getCode())
@@ -296,65 +228,44 @@ public class MiiLabReportMapper implements
         // id
         obs.setId(identifierValue);
         // meta data
-        obs.setMeta(new Meta()
-            .setProfile(List.of(new CanonicalType(
-                "https://www.medizininformatik-initiative"
-                    + ".de/fhir/core/modul-labor/StructureDefinition"
-                    + "/ObservationLab")))
-            .setSource("#swisslab"));
+        obs.setMeta(new Meta().setProfile(List.of(new CanonicalType(
+            "https://www.medizininformatik-initiative"
+                + ".de/fhir/core/modul-labor/StructureDefinition"
+                + "/ObservationLab"))).setSource("#swisslab"));
 
         // identifier
-        obs.addIdentifier(new Identifier()
-                .setType(identifierType)
-                .setSystem(fhirProperties
-                    .getSystems()
-                    .getObservationId())
+        obs.addIdentifier(new Identifier().setType(identifierType)
+                .setSystem(fhirProperties().getSystems().getObservationId())
                 .setValue(identifierValue)
-                .setAssigner(
-                    new Reference().setIdentifier(getIdentifierAssigner())))
+                .setAssigner(new Reference().setIdentifier(identifierAssigner())))
 
             // status
             .setStatus(source.getStatus())
             // category
-            .setCategory(List.of(new CodeableConcept()
-                .addCoding(new Coding()
-                    .setSystem("http://loinc.org")
-                    .setCode("26436-6"))
-                .addCoding(new Coding()
-                    .setSystem("http://terminology.hl7"
+            .setCategory(List.of(new CodeableConcept().addCoding(
+                    new Coding().setSystem("http://loinc.org").setCode("26436-6"))
+                .addCoding(new Coding().setSystem("http://terminology.hl7"
                         + ".org/CodeSystem/observation-category")
                     .setCode("laboratory"))
                 // with local category
-                .addCoding(source
-                    .getCategoryFirstRep()
-                    .getCodingFirstRep())))
+                .addCoding(source.getCategoryFirstRep().getCodingFirstRep())))
 
             // local coding: set system
-            .setCode(new CodeableConcept().addCoding(source
-                .getCode()
-                .getCodingFirstRep()
-                .setSystem(fhirProperties
-                    .getSystems()
-                    .getLaboratorySystem())))
-            .setEffective(source.getEffective())
-            .setValue(parseValue(source))
+            .setCode(new CodeableConcept().addCoding(
+                source.getCode().getCodingFirstRep().setSystem(
+                    fhirProperties().getSystems().getLaboratorySystem())))
+            .setEffective(source.getEffective()).setValue(parseValue(source))
             // interpretation
-            .setInterpretation(source
-                .getInterpretation()
-                .stream()
+            .setInterpretation(source.getInterpretation().stream()
                 .map(cc -> new CodeableConcept().setCoding(
                     // set system on each coding
-                    cc
-                        .getCoding()
-                        .stream()
-                        .map(c -> c.setSystem("http://terminology.hl7"
-                            + ".org/CodeSystem/v3-ObservationInterpretation"))
+                    cc.getCoding().stream().map(c -> c.setSystem(
+                            "http://terminology.hl7"
+                                + ".org/CodeSystem/v3-ObservationInterpretation"))
                         .collect(Collectors.toList())))
                 .collect(Collectors.toList()))
             // map reference range to simple quantity with value only
-            .setReferenceRange(source
-                .getReferenceRange()
-                .stream()
+            .setReferenceRange(source.getReferenceRange().stream()
                 .map(this::harmonizeRangeQuantities)
                 .collect(Collectors.toList()))
             // note
@@ -377,15 +288,11 @@ public class MiiLabReportMapper implements
     private Type parseValue(Observation obs) {
         if (obs.hasValueStringType()) {
             // fix numeric value with comparator in "valueString"
-            var valueString = obs
-                .getValueStringType()
-                .getValue();
+            var valueString = obs.getValueStringType().getValue();
 
             // check first character for comparator value
             var comp = valueString.charAt(0);
-            var valuePart = valueString
-                .substring(1)
-                .trim();
+            var valuePart = valueString.substring(1).trim();
 
             if ((comp == '<' || comp == '>') && NumberUtils.isCreatable(
                 valuePart)) {
@@ -407,46 +314,37 @@ public class MiiLabReportMapper implements
     private void ensureCodeIsSet(Quantity quantity) {
         if (quantity.hasUnit() && !quantity.hasCode()) {
             // every code needs a system :)
-            quantity
-                .setCode(quantity.getUnit())
-                .setSystem(fhirProperties
-                    .getSystems()
-                    .getLaboratoryUnitSystem());
+            quantity.setCode(quantity.getUnit()).setSystem(
+                fhirProperties().getSystems().getLaboratoryUnitSystem());
         }
     }
 
 
-    public MiiLabReportMapper mapServiceRequest(DiagnosticReport report,
+    public AimLabMapper mapServiceRequest(DiagnosticReport report,
         Bundle bundle) {
         // TODO clarify intention: using this as a wrapper resource in order
         //  to be conform to MII profiles
         var identifierType = new CodeableConcept(new Coding()
             .setSystem("http://terminology.hl7.org/CodeSystem/v2-0203")
             .setCode("PLAC"));
-        var identifierValue = createId(fhirProperties
-            .getSystems()
-            .getServiceRequestId(), report
-            .getIdentifierFirstRep()
-            .getValue(), report.getEffectiveDateTimeType());
+        var identifierValue =
+            createId(fhirProperties().getSystems().getServiceRequestId(),
+                report.getIdentifierFirstRep().getValue(),
+                report.getEffectiveDateTimeType());
 
         var serviceRequest = new ServiceRequest();
         // id
         serviceRequest.setId(identifierValue);
         // meta
-        serviceRequest.setMeta(new Meta()
-            .addProfile("https://www.medizininformatik-initiative"
+        serviceRequest.setMeta(new Meta().addProfile(
+            "https://www.medizininformatik-initiative"
                 + ".de/fhir/core/modul-labor/StructureDefinition"
-                + "/ServiceRequestLab")
-            .setSource("#swisslab"));
+                + "/ServiceRequestLab").setSource("#swisslab"));
 
         serviceRequest.setIdentifier(List.of(new Identifier()
-                .setSystem(fhirProperties
-                    .getSystems()
-                    .getServiceRequestId())
-                .setType(identifierType)
-                .setValue(identifierValue)
-                .setAssigner(
-                    new Reference().setIdentifier(getIdentifierAssigner()))))
+                .setSystem(fhirProperties().getSystems().getServiceRequestId())
+                .setType(identifierType).setValue(identifierValue)
+                .setAssigner(new Reference().setIdentifier(identifierAssigner()))))
 
             // authoredOn
             // uses report effective (date)
@@ -457,15 +355,15 @@ public class MiiLabReportMapper implements
             .setIntent(ServiceRequest.ServiceRequestIntent.ORDER)
 
             // category
-            .setCategory(List.of(new CodeableConcept(new Coding()
-                .setSystem("http://terminology.hl7"
-                    + ".org/CodeSystem/observation-category")
+            .setCategory(List.of(new CodeableConcept(new Coding().setSystem(
+                    "http://terminology.hl7"
+                        + ".org/CodeSystem/observation-category")
                 .setCode("laboratory"))))
 
             // code
-            .setCode(new CodeableConcept().setCoding(List.of(new Coding()
-                .setSystem("http://snomed.info/sct")
-                .setCode("59615004"))));
+            .setCode(new CodeableConcept().setCoding(List.of(
+                new Coding().setSystem("http://snomed.info/sct")
+                    .setCode("59615004"))));
 
         // add to bundle
         addResourceToBundle(bundle, serviceRequest);
@@ -478,36 +376,25 @@ public class MiiLabReportMapper implements
      * {@link Observation}
      */
     private void setEncounter(LaboratoryReport report, Bundle bundle) {
-        if (report
-            .getResource()
-            .getEncounter()
-            .getResource() == null) {
+        if (report.getResource().getEncounter().getResource() == null) {
             throw new IllegalArgumentException(String.format(
                 "Missing referenced encounter resource in report '%s'. "
-                    + "Reference is '%s'", report.getId(), report
-                    .getResource()
-                    .getEncounter()
-                    .getReference()));
+                    + "Reference is '%s'", report.getId(),
+                report.getResource().getEncounter().getReference()));
         }
 
-        var encounterId = ((Encounter) report
-            .getResource()
-            .getEncounter()
-            .getResource())
-            .getIdentifierFirstRep()
-            .getValue();
+        var encounterId =
+            ((Encounter) report.getResource().getEncounter().getResource())
+                .getIdentifierFirstRep().getValue();
 
-        getBundleEntryResources(bundle, ServiceRequest.class).forEach(r -> r
-            .getEncounter()
-            .setReference(
+        getBundleEntryResources(bundle, ServiceRequest.class).forEach(
+            r -> r.getEncounter().setReference(
                 getConditionalReference(ResourceType.Encounter, encounterId)));
-        getBundleEntryResources(bundle, DiagnosticReport.class).forEach(r -> r
-            .getEncounter()
-            .setReference(
+        getBundleEntryResources(bundle, DiagnosticReport.class).forEach(
+            r -> r.getEncounter().setReference(
                 getConditionalReference(ResourceType.Encounter, encounterId)));
-        getBundleEntryResources(bundle, Observation.class).forEach(o -> o
-            .getEncounter()
-            .setReference(
+        getBundleEntryResources(bundle, Observation.class).forEach(
+            o -> o.getEncounter().setReference(
                 getConditionalReference(ResourceType.Encounter, encounterId)));
     }
 
@@ -516,21 +403,16 @@ public class MiiLabReportMapper implements
 
         String idSystem;
         switch (resourceType) {
-            case Patient -> idSystem = fhirProperties
-                .getSystems()
-                .getPatientId();
-            case Encounter -> idSystem = fhirProperties
-                .getSystems()
-                .getEncounterId();
-            case ServiceRequest -> idSystem = fhirProperties
-                .getSystems()
-                .getServiceRequestId();
-            case DiagnosticReport -> idSystem = fhirProperties
-                .getSystems()
-                .getDiagnosticReportId();
-            case Observation -> idSystem = fhirProperties
-                .getSystems()
-                .getObservationId();
+            case Patient ->
+                idSystem = fhirProperties().getSystems().getPatientId();
+            case Encounter ->
+                idSystem = fhirProperties().getSystems().getEncounterId();
+            case ServiceRequest ->
+                idSystem = fhirProperties().getSystems().getServiceRequestId();
+            case DiagnosticReport -> idSystem =
+                fhirProperties().getSystems().getDiagnosticReportId();
+            case Observation ->
+                idSystem = fhirProperties().getSystems().getObservationId();
             default -> throw new IllegalArgumentException(
                 "Unsupported resource type when building conditional "
                     + "reference");
@@ -544,53 +426,34 @@ public class MiiLabReportMapper implements
      * {@link Observation}
      */
     public void setPatient(LaboratoryReport report, Bundle bundle) {
-        if (report
-            .getResource()
-            .getSubject()
-            .getResource() == null) {
+        if (report.getResource().getSubject().getResource() == null) {
             throw new IllegalArgumentException(String.format(
                 "Missing referenced patient resource in report '%s'. "
-                    + "Reference is '%s'", report.getId(), report
-                    .getResource()
-                    .getSubject()
-                    .getReference()));
+                    + "Reference is '%s'", report.getId(),
+                report.getResource().getSubject().getReference()));
         }
 
-        var patientId = ((Patient) report
-            .getResource()
-            .getSubject()
-            .getResource())
-            .getIdentifierFirstRep()
-            .getValue();
+        var patientId =
+            ((Patient) report.getResource().getSubject().getResource())
+                .getIdentifierFirstRep().getValue();
 
-        getBundleEntryResources(bundle, ServiceRequest.class).forEach(r -> r
-            .getSubject()
-            .setReference(
+        getBundleEntryResources(bundle, ServiceRequest.class).forEach(
+            r -> r.getSubject().setReference(
                 getConditionalReference(ResourceType.Patient, patientId)));
-        getBundleEntryResources(bundle, DiagnosticReport.class).forEach(r -> r
-            .getSubject()
-            .setReference(
+        getBundleEntryResources(bundle, DiagnosticReport.class).forEach(
+            r -> r.getSubject().setReference(
                 getConditionalReference(ResourceType.Patient, patientId)));
-        getBundleEntryResources(bundle, Observation.class).forEach(o -> o
-            .getSubject()
-            .setReference(
+        getBundleEntryResources(bundle, Observation.class).forEach(
+            o -> o.getSubject().setReference(
                 getConditionalReference(ResourceType.Patient, patientId)));
 
     }
 
     public <T> List<T> getBundleEntryResources(Bundle bundle,
         Class<T> domainType) {
-        return bundle
-            .getEntry()
-            .stream()
-            .map(BundleEntryComponent::getResource)
-            .filter(domainType::isInstance)
-            .map(domainType::cast)
+        return bundle.getEntry().stream().map(BundleEntryComponent::getResource)
+            .filter(domainType::isInstance).map(domainType::cast)
             .collect(Collectors.toList());
-    }
-
-    private Identifier getIdentifierAssigner() {
-        return identifierAssigner;
     }
 
     private String createId(Identifier identifier, DateTimeType dateTimeType) {
@@ -601,23 +464,17 @@ public class MiiLabReportMapper implements
     private String createId(String idSystem, String id,
         DateTimeType dateTimeType) {
         return TimestampPrefixedId.createNewIdentityValue(dateTimeType,
-            hasher.apply(idSystem + "|" + id));
+            hasher().apply(idSystem + "|" + id));
     }
 
     private void addResourceToBundle(Bundle bundle, DomainResource resource) {
-        var idElement = resource
-            .getIdElement()
-            .getValue();
-        bundle
-            .addEntry()
-            .setFullUrl(resource
-                .getResourceType()
-                .name() + "/" + idElement)
-            .setResource(resource)
-            .setRequest(new BundleEntryRequestComponent()
-                .setMethod(HTTPVerb.PUT)
-                .setUrl(getConditionalReference(resource.getResourceType(),
-                    idElement)));
+        var idElement = resource.getIdElement().getValue();
+        bundle.addEntry()
+            .setFullUrl(resource.getResourceType().name() + "/" + idElement)
+            .setResource(resource).setRequest(
+                new BundleEntryRequestComponent().setMethod(HTTPVerb.PUT).setUrl(
+                    getConditionalReference(resource.getResourceType(),
+                        idElement)));
     }
 
 }
